- El instalador ahora establece la ruta base para el htaccess, de forma que ya no falle en hostings como ionos. - El administrador de plugins muestra ahora un aviso claro cuando el archivo que subimos es mayor de lo que permite el servidor.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -162,7 +162,7 @@
     "block-date": "Sperrungsdatum",
     "blocked": "verstopft",
     "blocked-date": "Gesperrt bei",
-    "body": "Body",
+    "body": "Cuerpo",
     "book": "reservieren",
     "box-closed-ok": "Karton richtig geschlossen",
     "boxes": "Cajas",
@@ -1144,6 +1144,7 @@
     "plugin-deleted": "Plugin %1$s erfolgreich gelöscht.",
     "plugin-disabled": "Plugin korrekt deaktiviert.",
     "plugin-enabled": "Plugin erfolgreich aktiviert.",
+    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "Die Plugin-Installation ist auf diesem Server deaktiviert",
     "plugin-installed": "Plugin installiert",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
