--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -709,7 +709,7 @@
     "group-or-split-p": "Laguntzaile honek beste dokumentu batzuetatik dokumentu berria sortzeko aukera ematen du. Hautatu erabili nahi dituzun kantitateak, dokumentu berriaren data eta sakatu sortu botoia.",
     "grouping-type": "Taldea",
     "groups": "Taldeak",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Eranskinak ditu",
     "has-parent": "Arbasoa dauka",
     "hash": "Hash",
     "header": "Cabecera",
@@ -742,17 +742,17 @@
     "image": "Irudia",
     "images": "Irudiak",
     "images-added-correctly": "%count% irudi ondo gehituta",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "impacted-tax-re-subaccount": "Inpaktuarekin duten zerga azpikontua",
     "impacted-tax-subaccount": "Jasanarazitako BEZ azpikontua",
     "import": "Inportatu",
     "import-accounting-plan": "Kontabilitate plana inportatu",
     "import-accounting-plan-p": "Eremu hau hutsik utzi kontabilitate plan lehenetsia erabiltzeko. Edo hautatu zure kontabilitate plan pertsonalizatua duen fitxategia.",
-    "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "import-file": "Inportazio fitxategia",
+    "in-progress": "Aurrera doa",
     "in-stock": "Stockean",
     "inactive": "Ez-aktibo",
     "income-and-expenses": "Diru-sarrerak eta gastuak",
-    "incompatible-document": "Dokumentu bateraezina: %code%. Bezero, hornitzaile edo dibisa desberdina.",
+    "incompatible-document": "Dokumentu inkonpatibela: %code%. Bezeroa, hornitzailea edo moneta desberdina.",
     "incompatible-with-facturascripts": "FacturaScripts %version% bertsioarekin ez da bateragarria",
     "incorrect-accounting-amount": "Idazpenaren kopurua ez da zuzena.",
     "info": "Info",
@@ -1144,6 +1144,7 @@
     "plugin-deleted": "%pluginName% plugina ondo kendu da.",
     "plugin-disabled": "%pluginName% plugina ondo kendu da.",
     "plugin-enabled": "%pluginName% plugina ondo gaitu da.",
+    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "Plugin instalaketa desaktibatuta dago zerbitzari honetan",
     "plugin-installed": "'%pluginName%' plugina instalatuta",
     "plugin-need-update": "%plugin% pluginak eguneraketa bat beharko du FacturaScripts-en bertsio berriarekin funtzionatzeko.",
