--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -480,19 +480,19 @@
     "documents-generated": "Documents générés",
     "domiciled": "Domicilié",
     "done": "Effectué",
-    "done-date": "Fecha finalización",
+    "done-date": "Date de fin",
     "dont-sell-above-pvp": "Ne pas vendre au-dessus du prix de détail",
     "dont-sell-below-cost": "Ne pas vendre en dessous du coût",
     "download": "télécharger",
     "download-completed": "Téléchargement terminé",
-    "download-error": "Error al descargar. Código %status% - %error%",
-    "download-xml": "Descargar XML",
+    "download-error": "Erreur de téléchargement. Code %status% - %error%",
+    "download-xml": "Télécharger XML",
     "downloads": "téléchargements",
     "drag": "Traînée",
     "dto": "Disque.",
     "dto-2": "% de remise 2",
     "duplicate-record": "Enregistrement en double",
-    "duplicated-reference": "Referencia '%reference%' duplicada",
+    "duplicated-reference": "Référence '%reference%' dupliquée",
     "duplicated-request": "Requête dupliquée",
     "duration": "Durée",
     "edit": "Modifier",
@@ -1144,6 +1144,7 @@
     "plugin-deleted": "Plugin %pluginName% supprimé avec succès.",
     "plugin-disabled": "Le plugin %pluginName% a été désactivé correctement.",
     "plugin-enabled": "Le plugin %pluginName% a été activé avec succès.",
+    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "L'installation de modules est désactivée sur ce serveur",
     "plugin-installed": "Plugin '%pluginName%' installé",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
