--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -280,7 +280,7 @@
     "company-commission-info": "company-commission-info",
     "company-manager": "Direttore aziendale",
     "company-name": "Nome della ditta",
-    "company-warehouse": "Empresa\/Almacén",
+    "company-warehouse": "Azienda\/Magazzino",
     "comparative": "Comparativo",
     "compared": "compared",
     "compatible": "Compatible",
@@ -1144,6 +1144,7 @@
     "plugin-deleted": "Plugin %1$s cancellato con successo.",
     "plugin-disabled": "Plug-in disabilitato correttamente.",
     "plugin-enabled": "Plug-in attivato correttamente.",
+    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin installato",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
