--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1144,6 +1144,7 @@
     "plugin-deleted": "Plugin %pluginName% ha sido eliminado correctamente.",
     "plugin-disabled": "El Plugin %pluginName% ha sido desactivado correctamente.",
     "plugin-enabled": "El Plugin %pluginName% ha sido activado correctamente.",
+    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
@@ -1244,8 +1245,8 @@
     "recreate-system-integrity": "Volver a crear la integridad del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tienen una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utilice este formulario para hacer una devolución sobre esta factura.",
-    "rectified-invoices": "Facturas rectificativas",
-    "rectifying": "Rectificativa",
+    "rectified-invoices": "Faktury korygujące",
+    "rectifying": "Korekta",
     "rectifying-serie": "Serie rectificativa",
     "redirect": "Redirección",
     "reference": "Referencia",
@@ -1270,7 +1271,7 @@
     "reloading": "Recargando...",
     "remove-filter": "Eliminar filtro",
     "remove-from-list": "Quitar",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Usuwanie logów do %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar Asientos",
@@ -1278,14 +1279,14 @@
     "renumber-accounting-ok": "Renumeración de asientos completada",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-invoices-success": "Faktury z roku '%exercise%' zostały poprawnie ponumerowane",
     "repeat-new-password": "Repite la contraseña",
     "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Informe",
     "report-grouping-account": "Agrupar por cuentas",
     "report-non-grouping-account": "No agrupar por cuentas",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Ten raport umożliwia uzyskanie rozliczenia podatków z faktur zakupu lub sprzedaży w wybranym zakresie",
     "reports": "Informes",
     "request-sent": "Petición enviada",
     "required": "Obligatorio",
