--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -397,7 +397,7 @@
     "db-user": "Usuari de la base de senyes",
     "debit": "Deure",
     "debug-mode": "Modo de depuració",
-    "december": "Diciembre",
+    "december": "Desembre",
     "decimal-separator": "Separador de decimals",
     "decimals": "Decimals",
     "default": "Predeterminat",
@@ -405,18 +405,18 @@
     "default-retention": "Retenció predeterminada",
     "default-role": "Grup d'usuari per defecte",
     "default-tax": "Impost predeterminat",
-    "default-to-company-email": "Por defecto al email de la empresa",
-    "default-to-user-email": "Por defecto al email del usuario",
+    "default-to-company-email": "Per defecte a l'email de l'empresa",
+    "default-to-user-email": "Per defecte a l'email de l'usuari",
     "default-warehouse": "Almagasén predeterminat",
     "delete": "Borrar",
     "delete-all": "Eliminar-ho tot",
     "delete-closing": "Eliminar assentaments de tancament",
     "delete-data": "Borrar senyes",
     "delete-file": "Esborrar arxiu",
-    "delete-logs": "Eliminar historial",
+    "delete-logs": "Eliminar històrial",
     "delete-opening": "Eliminar l'assentament d'obertura",
     "delete-record": "Borrar el registre",
-    "Deleted": "Eliminado",
+    "Deleted": "Eliminat",
     "deleted-model": "Eliminat %model% (%key%) %desc%",
     "delivery-note": "Albarà",
     "delivery-note-email-subject": "El seu albarà %code%",
@@ -1144,6 +1144,7 @@
     "plugin-deleted": "El Plugin %pluginName% s'ha aliminat correctament.",
     "plugin-disabled": "El Plugin %pluginName% s'ha desactivat correctament.",
     "plugin-enabled": "El Plugin %pluginName% s'ha activat correctament.",
+    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "L'instalacion de complements està deshabilitada en este servidor",
     "plugin-installed": "S'ha instalat el Plugin '%pluginName%'",
     "plugin-need-update": "El plugin %plugin% necessitarà actualització per a funcionar amb la nova versió de FacturaScripts.",
