--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -580,7 +580,7 @@
     "exercise-date-out-range": "La fecha no está en el periodo del ejercicio.",
     "exercise-date-range-exists": "Ya existe un ejercicio en ese rango de fechas (%start% - %end%)",
     "exercise-not-found": "Ejercicio no encontrado.",
-    "exercise-without-accounting-plan": "El ejercicio %exercise% todavía no tiene plan contable",
+    "exercise-without-accounting-plan": "Exerce %exercise% ještě nemá účetní plán",
     "exercises": "Ejercicios",
     "exit": "Salir",
     "expedient": "Expediente",
@@ -709,10 +709,10 @@
     "group-or-split-p": "Este asistente permite generar un nuevo documento a partir de las líneas de otros. Seleccione las cantidades que desea usar, la fecha del nuevo documento y pulse el botón generar.",
     "grouping-type": "Agrupación",
     "groups": "Grupos",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Má přílohy",
     "has-parent": "Tiene padre",
     "hash": "Hash",
-    "header": "Cabecera",
+    "header": "Hlavička",
     "heading-account-group-id": "ID grupo epígrafes",
     "heading-account-id-root": "ID padre",
     "health": "Salud",
@@ -723,7 +723,7 @@
     "help-server-accepts-filesize": "Este servidor admite un tamaño máximo de %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
-    "high-purchase-price": "Precio más alto",
+    "high-purchase-price": "Vysoká nákupní cena",
     "hint-create-accounting-entry": "Crear el asiento contable para la regularización de impuestos del periodo",
     "hint-vat-register": "Ver\/Modificar registro de Impuesto",
     "history": "Historial",
@@ -742,17 +742,17 @@
     "image": "Imagen",
     "images": "Imágenes",
     "images-added-correctly": "%count% imágenes añadidas correctamente",
-    "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
+    "impacted-tax-re-subaccount": "Postižený subúčet daně převzaté",
     "impacted-tax-subaccount": "Subcuenta impuesto repercutido",
     "import": "Importar",
     "import-accounting-plan": "Importar plan contable",
     "import-accounting-plan-p": "Deje este campo en blanco para usar el plan contable predeterminado. O bien seleccione un archivo con su plan contable personalizado.",
-    "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "import-file": "Importní soubor",
+    "in-progress": "V procesu",
     "in-stock": "En stock",
     "inactive": "Inactivo",
     "income-and-expenses": "Ingresos y Gastos",
-    "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuento global.",
+    "incompatible-document": "Nekompatibilní dokument: %code%. Pro seskupení dokumentů musejí mít stejného klienta nebo dodavatele, sérii, sklad, měnu a celkovou slevu.",
     "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
     "incorrect-accounting-amount": "El importe del asiento es incorrecto.",
     "info": "Info",
@@ -1144,6 +1144,7 @@
     "plugin-deleted": "Plugin %pluginName% ha sido eliminado correctamente.",
     "plugin-disabled": "El Plugin %pluginName% ha sido desactivado correctamente.",
     "plugin-enabled": "El Plugin %pluginName% ha sido activado correctamente.",
+    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
     "plugin-installed": "Plugin '%pluginName%' instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
