--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -205,15 +205,15 @@
     "cant-load-controller": "Não é possível carregar o controlador.",
     "cant-modify-reference": "Não pode editar a referência.",
     "cant-remove-accounting-entry": "No se puede eliminar la entrada contable",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "Não é possível remover uma fatura que já possui devolução",
     "cant-remove-receipt": "No se puede eliminar el recibo",
     "cant-update-audit-log": "No se puede modificar el registro de auditoría",
     "card": "Cartão",
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
-    "cash": "Efectivo",
+    "cash": "Dinheiro",
     "categories": "Categorias",
-    "category": "Categoría",
+    "category": "Categoria",
     "cc": "CC",
     "center": "Center",
     "change": "mudança",
@@ -1144,6 +1144,7 @@
     "plugin-deleted": "O plugin 0 foi excluído com sucesso.",
     "plugin-disabled": "Plugin desativado com sucesso.",
     "plugin-enabled": "Plugin ativado com sucesso.",
+    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin instalado",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
