--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -761,20 +761,20 @@
     "insert-update": "Añadir o modificar",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
-    "installer": "Instalador de FacturaScripts",
+    "installer": "Instalátor FacturaScripts",
     "installer-p": "Bienvenido al instalador de FacturaScripts. Rellena los campos necesarios para conectar a la base de datos.",
     "installer-requirements": "Las siguientes extensiones y funciones son necesarias en FacturaScripts:",
     "integrity-check": "Verificación de integridad",
     "integrity-check-help": "Esta es una verificación de la integridad del sistema, descrita como",
     "international-identifier": "Identificación internacional",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Uvnitřúnijní",
     "invalid-alphanumeric-code": "El código introducido (%value%) no es válido. (%column%) debe tener entre %min% y %max% números o letras, sin espacios, acentos, ni otros caracteres.",
     "invalid-column-lenght": "%column% ha de tener entre %min% y %max% caracteres.",
     "invalid-date": "Fecha %date% no válida.",
     "invalid-date-there-are-invoices-after": "Fecha no válida: %date%. La factura %other% es anterior y tiene fecha %other-date%.",
-    "invalid-date-there-are-invoices-before": "Fecha no válida. La fecha %date% es posterior a la fecha de la factura siguiente.",
+    "invalid-date-there-are-invoices-before": "Neplatné datum. Datum %date% je před datem následující faktury.",
     "invalid-iban": "IBAN no válido: %iban%",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Neplatný kód ISO ''%iso-code%",
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
@@ -808,16 +808,16 @@
     "items-removed-correctly": "%num% elementos quitados correctamente",
     "ivarep-subaccount-not-found": "Subcuenta de IVA repercutido no encontrada",
     "ivasop-account-not-found": "Subcuenta de IVA soportado no encontrada",
-    "january": "Enero",
+    "january": "Leden",
     "job-name": "Nombre del trabajo",
     "journal": "Diario",
     "journal-closing": "Diario de cierre",
     "journal-opening": "Diario de apertura",
     "journals": "Diarios",
-    "july": "Julio",
-    "june": "Junio",
+    "july": "Červenec",
+    "june": "Červen",
     "justified": "Justificado",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Klíč Google Maps",
     "keys": "Claves",
     "lang-code": "Código de idioma",
     "language": "Idioma",
