--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1144,7 +1144,7 @@
     "plugin-deleted": "Plugin %pluginName% successfully deleted.",
     "plugin-disabled": "Plugin %pluginName% disabled successfully.",
     "plugin-enabled": "Plugin %pluginName% activated successfully.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "This server does not allow uploading files larger than %size% MB. Please increase the maximum upload file size in PHP or copy the file to the Plugins folder.",
     "plugin-installation-disabled": "Plugin installation is disabled on this server",
     "plugin-installed": "Plugin '%pluginName%' installed",
     "plugin-need-update": "The plugin %plugin% will need an update to work with the new version of FacturaScripts.",
