--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -504,7 +504,7 @@
     "email-not-sent": "Bidali gabe",
     "email-notification": "Email Jakinarazpena",
     "email-notification-disabled": "Email jakinarazpena %name% desgaituta dago",
-    "email-notification-not-exists": "%name% mezu elektronikoaren jakinarazpena ez da aurkitu",
+    "email-notification-not-exists": "%name% e-posta jakinarazpena ez da aurkitu",
     "email-replies": "Posta elektronikoen erantzuna",
     "email-replies-to": "Email honen erantzunak %email% helbidera joango dira",
     "email-sent": "Posta elektronikoz bidalita",
@@ -767,7 +767,7 @@
     "integrity-check": "Integritate egiaztatzea",
     "integrity-check-help": "Hau sistemaren integritate egiaztatze bat da, honela deskribatua",
     "international-identifier": "Nazioarteko identifikatzailea",
-    "intra-community": "Intracomunitaria",
+    "intra-community": "Dentro de la comunidad",
     "invalid-alphanumeric-code": "(%value%) sartutako kodea baliogabea da. (%column%) %min% eta %max% bitarteko zenbaki edo letra kopurua eduki behar du espazio, azentu edo beste karaktere gabe.",
     "invalid-column-lenght": "%column% %min% eta %max% karaktere artean izan behar ditu.",
     "invalid-date": "%date% data ez da zuzena.",
