--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -500,12 +500,12 @@
     "email": "Email",
     "email-bcc": "Mettre en copie invisible",
     "email-cc": "Mettre en copie",
-    "email-not-configured": "Les paramètres e-mail ne sont pas configurés. Vous pouvez le faire depuis le menu Administration > Panneau de contrôle > Préférences de l'application",
+    "email-not-configured": "Les paramètres de messagerie électronique ne sont pas configurés. Vous pouvez le faire depuis le menu Administration > Panneau de contrôle > Préférences de l'application",
     "email-not-sent": "Non envoyé",
-    "email-notification": "Notificación por email",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
-    "email-notification-not-exists": "Notificación de email %name% no encontrada",
-    "email-replies": "Respuesta de emails",
+    "email-notification": "Notification par email",
+    "email-notification-disabled": "La notification par email %name% est désactivée",
+    "email-notification-not-exists": "Notification par email %name% non trouvée",
+    "email-replies": "Réponses aux emails",
     "email-replies-to": "Les réponses à cet e-mail seront envoyées à %email%",
     "email-sent": "Envoyé par email",
     "email-sent-to": "E-mail envoyé à %email%",
@@ -517,12 +517,12 @@
     "employees": "Employé·e·s",
     "empty": "Vide",
     "empty-contact-data": "El contacto debe tener nombre o email o dirección",
-    "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
+    "empty-ref-or-missing": "Référence vide ou produit non trouvé",
     "enable": "Activer",
     "enable-api": "Activer l'API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "Activée",
-    "enabled-plugins": "Plugins activos",
+    "enabled-plugins": "Plugins activés",
     "encrypt": "Chiffrement",
     "end-date": "Date de fin",
     "end-time": "Heure de fin",
