--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -291,7 +291,7 @@
     "configure-columns": "Column Configurator",
     "confirm": "Confermare",
     "confirm-delete": "Conferma cancellazione?",
-    "connect": "Conectar",
+    "connect": "Connettere",
     "contact": "Contatto",
     "contact-data": "Informazioni di contatto",
     "contact-info": "Informazioni sui contatti",
