--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -218,7 +218,7 @@
     "center": "Center",
     "change": "mudança",
     "channel": "channel",
-    "charge-date": "Fecha cargo",
+    "charge-date": "Data de cobrança",
     "chart": "Chart",
     "charts": "charts",
     "chat": "Chat",
