--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -165,14 +165,14 @@
     "body": "Corpo",
     "book": "Reserve",
     "box-closed-ok": "Caixa fechada corretamente",
-    "boxes": "Cajas",
-    "browse": "Examinar",
+    "boxes": "Caixas",
+    "browse": "Navegar",
     "business-name": "Nome da empresa",
     "buy": "Comprar",
     "cache": "Cache",
     "cache-dir": "Diretório de cache '0'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
+    "calculated-net-diff": "Diferença encontrada ao calcular o líquido. %net% VS %net2%",
     "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
     "calculation": "Cálculo",
