Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -822,7 +822,7 @@
     "lang-code": "Código de idioma",
     "language": "Idioma",
     "languages-ca_ES": "Catalán",
-    "languages-cs_CZ": "Checo",
+    "languages-cs_CZ": "Čeština",
     "languages-de_DE": "Alemán",
     "languages-en_EN": "Inglés",
     "languages-es_AR": "Español (Argentina)",
@@ -841,8 +841,8 @@
     "languages-fr_FR": "Francés",
     "languages-gl_ES": "Gallego",
     "languages-it_IT": "Italiano",
-    "languages-pl_PL": "Polaco",
-    "languages-pt_BR": "Portugués (Brasil)",
+    "languages-pl_PL": "Polština",
+    "languages-pt_BR": "Portugalština (Brazílie)",
     "languages-pt_PT": "Portugués",
     "languages-va_ES": "Valenciano",
     "last-activity": "Última conexión",
@@ -850,7 +850,7 @@
     "last-block": "Último bloque",
     "last-ip": "Última IP",
     "last-month": "El mes pasado",
-    "last-price-estimation": "Última precio de presupuesto",
+    "last-price-estimation": "Poslední odhad ceny",
     "last-price-sale": "Último precio de venta",
     "last-purchase-price": "Último precio de compra",
     "last-quarter": "El pasado cuatrimestre",
@@ -861,12 +861,12 @@
     "last-week": "La semana pasada",
     "last-year": "El año pasado",
     "latitude": "Latitud",
-    "latitude-abb": "Lat",
+    "latitude-abb": "Zem. šířka",
     "ledger": "Diario",
     "left": "Izquierda",
     "level": "Nivel",
-    "level-benefit-sales": "Nivel para ver beneficios",
-    "level-cost-sales": "Nivel para ver costes",
+    "level-benefit-sales": "Niveau pro zobrazení výhod",
+    "level-cost-sales": "Niveau pro zobrazení nákladů",
     "level1": "Nivel 1",
     "level2": "Nivel 2",
     "level3": "Nivel 3",
@@ -890,7 +890,7 @@
     "locked": "Bloqueado",
     "log": "Log",
     "login": "Iniciar sesión",
-    "login-cookie-fail": "Cookie de sesión no válida",
+    "login-cookie-fail": "Neplatný relační cookie",
     "login-image": "Imagen de login",
     "login-ok": "Sesión iniciada satisfactoriamente (cookie). Usuario: '%nick%'",
     "login-password-fail": "El usuario o la contraseña son incorrectos",
@@ -904,7 +904,7 @@
     "logs": "Logs",
     "long": "Largo",
     "longitude": "Longitud",
-    "longitude-abb": "Long",
+    "longitude-abb": "Zem. délka",
     "look-for-gaps": "Buscar huecos",
     "lot": "Lote",
     "low-security": "Baja seguridad",
@@ -922,7 +922,7 @@
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código de fabricante",
     "manufacturers": "Fabricantes",
-    "march": "Marzo",
+    "march": "Březen",
     "margin": "Margen",
     "margin-top": "Márgen superior",
     "mark-as-homepage": "Marcar como página de inicio",
