--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -638,7 +638,7 @@
     "footer-text": "Orri-oinaren testua",
     "for-admins": "Administratzaileentzat",
     "for-all": "Guztientzat",
-    "for-all-exercises": "Para todos los ejercicios",
+    "for-all-exercises": "<Sin traducción>",
     "for-purchase": "Erosgaia",
     "for-sale": "Salgai",
     "foresee": "Aurreikusi",
