--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -282,9 +282,9 @@
     "company-name": "Nome della ditta",
     "company-warehouse": "Azienda\/Magazzino",
     "comparative": "Comparativo",
-    "compared": "compared",
+    "compared": "comparato",
     "compatible": "Compatible",
-    "completed": "completed",
+    "completed": "completato",
     "component": "Component",
     "concept": "Concept",
     "conditions": "Condizioni",
@@ -295,7 +295,7 @@
     "contact": "Contatto",
     "contact-data": "Informazioni di contatto",
     "contact-info": "Informazioni sui contatti",
-    "contact-information": "contact-information",
+    "contact-information": "informazioni-di-contatto",
     "contact-person": "Referente",
     "contacts": "Contatti",
     "context": "Contexto",
