--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1379,25 +1379,25 @@
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Mostrar precio en la impresión",
     "show-quantity": "Mostrar cantidad en la impresión",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Pokaż nową sekcję",
     "signature": "Firma",
     "simple": "Simple",
-    "simplified": "Simplificada",
+    "simplified": "Uproszczona",
     "size": "Tamaño",
     "sketch": "Boceto",
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "Pequeño",
     "smaller-than": "Menor que",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "Rozszerzenie SOAP nie jest zainstalowane w PHP. Skontaktuj się z dostawcą hostingu, aby je aktywować.",
     "social-security-number": "Número Seguridad Social",
     "sort": "Orden",
-    "sort-by-column": "Ordenar por columna",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
-    "sort-by-date-desc": "Ordenar por fecha desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
-    "sort-by-ref-desc": "Ordenar por referencia desc.",
-    "sorted-asc": "Ordenado ascendente",
-    "sorted-desc": "Ordenado descendente",
+    "sort-by-column": "Sortuj wg kolumny",
+    "sort-by-date-asc": "Sortuj wg daty rosnąco",
+    "sort-by-date-desc": "Sortuj wg daty malejąco",
+    "sort-by-ref-asc": "Sortuj wg referencji rosnąco",
+    "sort-by-ref-desc": "Sortuj wg referencji malejąco",
+    "sorted-asc": "Posortowane rosnąco",
+    "sorted-desc": "Posortowane malejąco",
     "source": "Fuente",
     "source-code": "Código fuente",
     "special-account": "Cuenta especial",
@@ -1422,7 +1422,7 @@
     "stock-transfers": "Transferencias de stock",
     "stockmax": "Stock máx.",
     "stockmin": "Stock mín.",
-    "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
+    "storage-limit-almost": "Niemal osiągnięto limit przechowywania (%limit%). Pozostało %free%",
     "storage-limit-reached": "Límite de almacenamiento alcanzado",
     "stripe": "Stripe",
     "structured-data-csv": "Archivo CSV",
