--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -173,15 +173,15 @@
     "cache-dir": "Diretório de cache '0'",
     "calculate": "Calcular",
     "calculated-net-diff": "Diferença encontrada ao calcular o líquido. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-surcharge-diff": "Diferença encontrada ao calcular a sobretaxa de equivalência. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferença encontrada ao calcular o total do IVA. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendário",
     "can-not-open-zip-file": "Não é possível abrir o arquivo zip '0'",
     "cancel": "Cancelar",
     "cancel-data": "Cancelar alterações ou operação",
-    "cancelled": "cancelled",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cancelled": "cancelado",
+    "cannot-generate-accounting-entry": "Erro ao gerar o lançamento contabilístico da fatura %invoice%",
     "cant-assign-date-already-regularized": "Você não pode atribuir a data 0 porque já existe uma regularização de 1 para esse período.",
     "cant-assing-subaccount-supplier": "Não é possível associar subconta para provedor 0",
     "cant-associate-customer-subaccount": "Não é possível associar a subconta do cliente 0",
