--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -446,10 +446,10 @@
     "description-4ba": "Descripció 4ba",
     "description2": "Descripció 2",
     "description3": "Descripció 3",
-    "design": "Diseño",
+    "design": "Disseny",
     "destination-warehouse": "Almagasén de destí",
     "detail": "Detall",
-    "details": "Detalles",
+    "details": "Detalls",
     "difference": "Diferència",
     "different-passwords": "Les contrasenyes per a l'usuari %userNick% no coincidixen",
     "different-than": "Diferent de",
