--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1144,7 +1144,7 @@
     "plugin-deleted": "Plugin %pluginName% eliminouse con éxito.",
     "plugin-disabled": "O Plugin %pluginName% foi desactivado correctamente.",
     "plugin-enabled": "Plugin activado correctamente.",
-    "plugin-file-too-big": "Este servidor no permite subir archivos de más de %size% MB. Por favor, aumenta el tamaño máximo de subida de archivos en PHP o copia el archivo a la carpeta Plugins.",
+    "plugin-file-too-big": "Este servidor non permite subir arquivos de máis de %size% MB. Por favor, aumenta o tamaño máximo de subida de arquivos en PHP ou copia el arquivo á carpeta Plugins.",
     "plugin-installation-disabled": "A instalación de plugins está desactivada neste servidor",
     "plugin-installed": "Plugin \"% pluginName%\" instalado",
     "plugin-need-update": "O plugin %plugin% precisará actualización para funcionar coa nova versión de FacturaScripts.",
