--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -220,17 +220,17 @@
     "channel": "channel",
     "charge-date": "Data de cobrança",
     "chart": "Chart",
-    "charts": "charts",
+    "charts": "gráficos",
     "chat": "Chat",
     "check-table": "Erro ao verificar a tabela '0'",
     "check-vies": "Comprobar VIES",
     "checked": "Checado",
-    "children": "Niño",
+    "children": "Criança",
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
     "choose-employee": "Choose employee",
-    "choose-files": "Seleccionar archivos",
+    "choose-files": "Escolher arquivos",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Seleciona a série",
     "choose-source": "Choose source",
